tests/baselines/reference/parserForOfStatement6.errors.txt
tests/cases/conformance/parser/ecmascript6/Iterators/parserForOfStatement6.ts(1,17): error TS1188: Only a single variable declaration is allowed in a 'for...of' statement.
tests/cases/conformance/parser/ecmascript6/Iterators/parserForOfStatement6.ts(1,26): error TS2304: Cannot find name 'X'.


==== tests/cases/conformance/parser/ecmascript6/Iterators/parserForOfStatement6.ts (2 errors) ====
    for (var a = 1, b = 2 of X) {
                    ~
!!! error TS1188: Only a single variable declaration is allowed in a 'for...of' statement.
                             ~
!!! error TS2304: Cannot find name 'X'.
    }